# simple-database

./: .gitignore  Cargo.toml  README.md  http.hurl
.github/workflows/: check-and-lint.yml  ci.yml
db-engine/: Cargo.toml
db-engine/src/: compaction.rs  database.rs  entries.rs  errors.rs  lib.rs  mem_table.rs  prelude.rs  sstable.rs  wal.rs
db-engine/src/sstable/: mod.rs  sstable.rs  sstable_index.rs  sstable_querier.rs  sstable_reader.rs  sstable_writer.rs
db-engine/src/utils/: file.rs  microseconds.rs  mod.rs
db-server/: Cargo.toml
db-server/src/: app_server.rs  app_state.rs  main.rs  router.rs  scheduler.rs
db-server/src/handlers/: delete.rs  error_handler.rs  get.rs  mod.rs  prelude.rs  set.rs
