[package]
name = "db-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bincode = "1.3.3"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"

[dev-dependencies]
tempdir = "0.3.7"
